# fraud-detection

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  app.py  config  config.toml  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements-app.txt  requirements-ci.txt  requirements.txt  setup.cfg
.dvc/: config
.github/workflows/: ml_pipeline.yml
data/: README.md  samples.csv
models/: scaler.joblib
reports/: metrics.json
reports/figures/: confusion_matrix.json  pr_curve.json  roc_curve.json
src/: serve.py
src/data/: prepare.py
src/evaluation/: drift.py  evaluate.py
src/features/: featurize.py
src/models/: train.py
tests/: test_pipeline.py
